--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/project_1.jpg" alt="project 1" />
+                <img src="../images/project_1.jpg" alt="project 1" />
                 <div class="layer">
                     <h3>Project Name1</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
